--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -30,6 +30,9 @@
                         <li class="nav-item">
                             <a class="nav-link {% if app.request.get('_route') starts with 'template_' %}active{% endif %}" href="{{ path('template_manage') }}">E-Mail-Template</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if app.request.get('_route') starts with 'smtp_config_' %}active{% endif %}" href="{{ path('smtp_config_edit') }}">SMTP-Konfiguration</a>
+                        </li>
                     </ul>
                 </div>
             </div>
