--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -5,9 +5,17 @@
 {% block body %}
     <div class="d-flex justify-content-between align-items-center mb-4">
         <h1>Benutzerverwaltung</h1>
-        <a href="{{ path('user_new') }}" class="btn btn-success">
-            <i class="fas fa-plus"></i> Neuen Benutzer anlegen
-        </a>
+        <div>
+            <a href="{{ path('user_export') }}" class="btn btn-info me-2">
+                <i class="fas fa-download"></i> CSV Export
+            </a>
+            <a href="{{ path('user_import') }}" class="btn btn-warning me-2">
+                <i class="fas fa-upload"></i> CSV Import
+            </a>
+            <a href="{{ path('user_new') }}" class="btn btn-success">
+                <i class="fas fa-plus"></i> Neuen Benutzer anlegen
+            </a>
+        </div>
     </div>
 
     {% if users is empty %}
