--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,7 @@
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
+        {% if app.session.get('is_authenticated') %}
         <nav class="navbar navbar-expand-lg navbar-dark bg-primary mb-4">
             <div class="container">
                 <a class="navbar-brand" href="{{ path('dashboard') }}">Ticketumfrage-Tool</a>
@@ -33,10 +34,19 @@
                         <li class="nav-item">
                             <a class="nav-link {% if app.request.get('_route') starts with 'smtp_config_' %}active{% endif %}" href="{{ path('smtp_config_edit') }}">SMTP-Konfiguration</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if app.request.get('_route') == 'change_password' %}active{% endif %}" href="{{ path('change_password') }}">Passwort ändern</a>
+                        </li>
+                    </ul>
+                    <ul class="navbar-nav ms-auto">
+                        <li class="nav-item">
+                            <a class="nav-link" href="{{ path('app_logout') }}">Abmelden</a>
+                        </li>
                     </ul>
                 </div>
             </div>
         </nav>
+        {% endif %}
 
         <div class="container">
             {% for label, messages in app.flashes %}
