--- a/templates/csv_upload/upload.html.twig
+++ b/templates/csv_upload/upload.html.twig
@@ -43,7 +43,9 @@
                 </div>
                 
                 <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-primary">CSV-Datei hochladen und verarbeiten</button>
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fas fa-file-upload"></i> CSV-Datei hochladen und verarbeiten
+                    </button>
                 </div>
             {{ form_end(form) }}
         </div>
