--- a/templates/security/change_password.html.twig
+++ b/templates/security/change_password.html.twig
@@ -33,8 +33,12 @@
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('change_password') }}">
                         
                         <div class="d-flex justify-content-between">
-                            <a href="{{ path('dashboard') }}" class="btn btn-secondary">Zurück</a>
-                            <button type="submit" class="btn btn-primary">Passwort ändern</button>
+                            <a href="{{ path('dashboard') }}" class="btn btn-secondary">
+                                <i class="fas fa-arrow-left"></i> Zurück
+                            </a>
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fas fa-key"></i> Passwort ändern
+                            </button>
                         </div>
                     </form>
                 </div>
