--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -11,7 +11,9 @@
                 <div class="card-body">
                     <h5 class="card-title">E-Mail-Versand</h5>
                     <p class="card-text">Laden Sie eine CSV-Datei hoch, um Zufriedenheits-E-Mails zu Tickets zu versenden.</p>
-                    <a href="{{ path('csv_upload') }}" class="btn btn-primary">Zum CSV-Upload</a>
+                    <a href="{{ path('csv_upload') }}" class="btn btn-primary">
+                        <i class="fas fa-upload"></i> Zum CSV-Upload
+                    </a>
                 </div>
             </div>
         </div>
@@ -20,7 +22,9 @@
                 <div class="card-body">
                     <h5 class="card-title">Benutzerverwaltung</h5>
                     <p class="card-text">Verwalten Sie die Benutzer und deren E-Mail-Adressen.</p>
-                    <a href="{{ path('user_index') }}" class="btn btn-primary">Zur Benutzerverwaltung</a>
+                    <a href="{{ path('user_index') }}" class="btn btn-primary">
+                        <i class="fas fa-users"></i> Zur Benutzerverwaltung
+                    </a>
                 </div>
             </div>
         </div>
@@ -29,7 +33,9 @@
                 <div class="card-body">
                     <h5 class="card-title">E-Mail-Template</h5>
                     <p class="card-text">Bearbeiten Sie die Vorlage für die zu versendenden E-Mails.</p>
-                    <a href="{{ path('template_manage') }}" class="btn btn-primary">Zum E-Mail-Template</a>
+                    <a href="{{ path('template_manage') }}" class="btn btn-primary">
+                        <i class="fas fa-envelope-open-text"></i> Zum E-Mail-Template
+                    </a>
                 </div>
             </div>
         </div>
@@ -38,7 +44,9 @@
                 <div class="card-body">
                     <h5 class="card-title">SMTP-Konfiguration</h5>
                     <p class="card-text">Konfigurieren Sie den SMTP-Server für den E-Mail-Versand.</p>
-                    <a href="{{ path('smtp_config_edit') }}" class="btn btn-primary">Zur SMTP-Konfiguration</a>
+                    <a href="{{ path('smtp_config_edit') }}" class="btn btn-primary">
+                        <i class="fas fa-cogs"></i> Zur SMTP-Konfiguration
+                    </a>
                 </div>
             </div>
         </div>
