--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -24,7 +24,9 @@
                         
                         <input type="hidden" name="_csrf_token" value="{{ csrf_token('authenticate') }}">
                         
-                        <button type="submit" class="btn btn-primary w-100">Anmelden</button>
+                        <button type="submit" class="btn btn-primary w-100">
+                            <i class="fas fa-sign-in-alt"></i> Anmelden
+                        </button>
                     </form>
                 </div>
             </div>
