--- a/templates/smtp_config/edit.html.twig
+++ b/templates/smtp_config/edit.html.twig
@@ -72,8 +72,12 @@
                 </div>
                 
                 <div class="mt-4">
-                    <button type="submit" class="btn btn-primary">Speichern & Testen</button>
-                    <a href="{{ path('dashboard') }}" class="btn btn-secondary ml-2">Zurück zum Dashboard</a>
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fas fa-save"></i> Speichern & Testen
+                    </button>
+                    <a href="{{ path('dashboard') }}" class="btn btn-secondary ml-2">
+                        <i class="fas fa-arrow-left"></i> Zurück zum Dashboard
+                    </a>
                 </div>
             {{ form_end(form) }}
         </div>
