--- a/templates/template/manage.html.twig
+++ b/templates/template/manage.html.twig
@@ -44,7 +44,9 @@
                         </div>
                         
                         <div class="d-grid">
-                            <button type="submit" class="btn btn-primary">Template hochladen</button>
+                            <button type="submit" class="btn btn-primary">
+                                <i class="fas fa-upload"></i> Template hochladen
+                            </button>
                         </div>
                     </form>
                 </div>
@@ -60,7 +62,9 @@
                     {% if templateExists %}
                         <p>Ein E-Mail-Template ist vorhanden.</p>
                         <div class="d-grid">
-                            <a href="{{ path('template_download') }}" class="btn btn-success">Template herunterladen</a>
+                            <a href="{{ path('template_download') }}" class="btn btn-success">
+                                <i class="fas fa-download"></i> Template herunterladen
+                            </a>
                         </div>
                     {% else %}
                         <div class="alert alert-warning">
