--- a/templates/user/import.html.twig
+++ b/templates/user/import.html.twig
@@ -32,8 +32,12 @@ user2,user2@example.com</pre>
             </div>
 
             <div class="d-flex justify-content-between">
-                <a href="{{ path('user_index') }}" class="btn btn-secondary">Zurück zur Übersicht</a>
-                <button type="submit" class="btn btn-primary">Importieren</button>
+                <a href="{{ path('user_index') }}" class="btn btn-secondary">
+                    <i class="fas fa-arrow-left"></i> Zurück zur Übersicht
+                </a>
+                <button type="submit" class="btn btn-primary">
+                    <i class="fas fa-file-import"></i> Importieren
+                </button>
             </div>
         {{ form_end(form) }}
     </div>
