--- a/templates/user/new.html.twig
+++ b/templates/user/new.html.twig
@@ -25,9 +25,13 @@
                     <div class="text-danger">{{ form_errors(form.email) }}</div>
                 </div>
                 
-                <div class="d-flex justify-content-between">
-                    <a href="{{ path('user_index') }}" class="btn btn-secondary">Zurück zur Übersicht</a>
-                    <button type="submit" class="btn btn-primary">Benutzer anlegen</button>
+                <div class="d-flex gap-2">
+                    <a href="{{ path('user_index') }}" class="btn btn-secondary">
+                        <i class="fas fa-arrow-left"></i> Zurück zur Übersicht
+                    </a>
+                    <button type="submit" class="btn btn-primary">
+                        <i class="fas fa-user-plus"></i> Benutzer anlegen
+                    </button>
                 </div>
             {{ form_end(form) }}
         </div>
