Update page title in index.html.twig to reflect the correct context

--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Dashboard - {{ parent() }}{% endblock %}
+{% block title %}Übersicht - {{ parent() }}{% endblock %}
 
 {% block body %}
     <h1 class="mb-4">Dashboard</h1>
