--- a/templates/template/manage.html.twig
+++ b/templates/template/manage.html.twig
@@ -24,6 +24,7 @@
                 <li><code>{{ticketName}}</code> - Der Name/Titel des Tickets</li>
                 <li><code>{{username}}</code> - Der Benutzername des Empfängers</li>
                 <li><code>{{ticketLink}}</code> - Ein Link zum Ticket im Ticketsystem</li>
+                <li><code>{{dueDate}}</code> - Datum in 7 Tagen (z.B. für Antwortfrist)</li>
                 {% endverbatim %}
             </ul>
         </div>
@@ -90,6 +91,7 @@
                         <li class="list-group-item">Ticket Name: {{ previewData.ticketName }}</li>
                         <li class="list-group-item">Benutzername: {{ previewData.username }}</li>
                         <li class="list-group-item">Ticket Link: <a href="{{ previewData.ticketLink }}" target="_blank">{{ previewData.ticketLink }}</a></li>
+                        <li class="list-group-item">Fälligkeitsdatum: {{ previewData.dueDate }}</li>
                     </ul>
                 </div>
                 <div class="col-md-8">
