--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -4,13 +4,13 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>{% block title %}Ticketumfrage-Tool - ARZ Haan AG{% endblock %}</title>
-        <link rel="icon" href="{{ asset('images/arz-logo.svg') }}">
+        <link rel="icon" href="/images/arz-logo.svg">
         <!-- Bootstrap CSS -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
         <!-- Font Awesome für Icons -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" rel="stylesheet">
         <!-- ARZ Haan AG Corporate Design -->
-        <link href="{{ asset('css/arz-style.css') }}" rel="stylesheet">
+        <link href="/css/arz-style.css" rel="stylesheet">
         {% block stylesheets %}{% endblock %}
     </head>
     <body>
@@ -18,7 +18,7 @@
         <nav class="navbar navbar-expand-lg navbar-dark navbar-arz mb-4">
             <div class="container">
                 <a class="navbar-brand" href="{{ path('dashboard') }}">
-                    <img src="{{ asset('images/arz-logo.svg') }}" alt="ARZ Haan AG Logo" class="d-inline-block align-top">
+                    <img src="/images/arz-logo.svg" alt="ARZ Haan AG Logo" class="d-inline-block align-top">
                     Ticketumfrage-Tool
                 </a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -72,7 +72,7 @@
             <div class="container text-center">
                 <div class="row">
                     <div class="col-md-6 text-md-start">
-                        <img src="{{ asset('images/arz-logo.svg') }}" alt="ARZ Haan AG Logo" height="30">
+                        <img src="/images/arz-logo.svg" alt="ARZ Haan AG Logo" height="30">
                     </div>
                     <div class="col-md-6 text-md-end">
                         <span>&copy; {{ 'now'|date('Y') }} ARZ Haan AG - Ticketumfrage-Tool</span>
