--- a/templates/dashboard/index.html.twig
+++ b/templates/dashboard/index.html.twig
@@ -76,10 +76,11 @@
                         <tr>
                             <td>{{ email.ticketId }}</td>
                             <td>{{ email.username }}</td>
-                            <td>{{ email.email }}</td>
-                            <td>
+                            <td>{{ email.email }}</td>                            <td>
                                 {% if email.status starts with 'error' %}
                                     <span class="badge bg-danger">{{ email.status }}</span>
+                                {% elseif email.status starts with 'Nicht versendet' %}
+                                    <span class="badge bg-warning text-dark">{{ email.status }}</span>
                                 {% else %}
                                     <span class="badge bg-success">{{ email.status }}</span>
                                 {% endif %}
