--- a/templates/csv_upload/upload.html.twig
+++ b/templates/csv_upload/upload.html.twig
@@ -4,49 +4,13 @@
 
 {% block body %}
     <h1 class="mb-4">CSV-Upload für E-Mail-Versand</h1>
-      <div class="card mb-4">
-        <div class="card-header bg-primary text-white">
-            <h5 class="card-title mb-0">Hinweise zum CSV-Format</h5>
-        </div>
-        <div class="card-body">
-            <p>Die CSV-Datei muss folgende Spalten enthalten:</p>
-            <ul>
-                <li><strong>{{ currentConfig.ticketIdField }}</strong> - Die ID des Tickets</li>
-                <li><strong>{{ currentConfig.usernameField }}</strong> - Der Benutzername, an den die E-Mail gesendet werden soll</li>
-                <li><strong>{{ currentConfig.ticketNameField }}</strong> - (optional) Der Name/Titel des Tickets</li>
-            </ul>
-            <p>Beispiel:</p>
-            <pre>{{ currentConfig.ticketIdField }},{{ currentConfig.usernameField }},{{ currentConfig.ticketNameField }}
-123456,mustermann,Problem mit Anmeldung
-123457,schmidt,Fehler bei Dateiupload</pre>
-        </div>
-    </div>
-      <div class="card mb-4">
-        <div class="card-header">
-            <h5 class="card-title mb-0">CSV-Spaltenkonfiguration</h5>
-        </div>
-        <div class="card-body">
-            <p class="text-muted">Konfigurieren Sie hier die Namen der Spalten in Ihrer CSV-Datei. Wenn Sie die Felder leer lassen, werden die Standardwerte verwendet.</p>
-            {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
-                <div class="row">
-                    <div class="col-md-4">
-                        {{ form_row(form.csvFieldConfig.ticketIdField) }}
-                    </div>
-                    <div class="col-md-4">
-                        {{ form_row(form.csvFieldConfig.usernameField) }}
-                    </div>
-                    <div class="col-md-4">
-                        {{ form_row(form.csvFieldConfig.ticketNameField) }}
-                    </div>
-                </div>
-        </div>
-    </div>
     
-    <div class="card">
+    <div class="card mb-4">
         <div class="card-header">
             <h5 class="card-title mb-0">CSV-Datei hochladen</h5>
         </div>
         <div class="card-body">
+            {{ form_start(form, {'attr': {'novalidate': 'novalidate'}}) }}
                 <div class="mb-3">
                     {{ form_label(form.csvFile) }}
                     {{ form_widget(form.csvFile) }}
@@ -69,6 +33,44 @@
                     <button type="submit" class="btn btn-primary">
                         <i class="fas fa-file-upload"></i> CSV-Datei hochladen und verarbeiten
                     </button>
+                </div>
+        </div>
+    </div>
+
+    <div class="card mb-4">
+        <div class="card-header bg-info text-white">
+            <h5 class="card-title mb-0">Hinweise zum CSV-Format</h5>
+        </div>
+        <div class="card-body">
+            <p>Die CSV-Datei muss folgende Spalten enthalten:</p>
+            <ul>
+                <li><strong>{{ currentConfig.ticketIdField }}</strong> - Die ID des Tickets</li>
+                <li><strong>{{ currentConfig.usernameField }}</strong> - Der Benutzername, an den die E-Mail gesendet werden soll</li>
+                <li><strong>{{ currentConfig.ticketNameField }}</strong> - (optional) Der Name/Titel des Tickets</li>
+            </ul>
+            <p>Beispiel:</p>
+            <pre>{{ currentConfig.ticketIdField }},{{ currentConfig.usernameField }},{{ currentConfig.ticketNameField }}
+123456,mustermann,Problem mit Anmeldung
+123457,schmidt,Fehler bei Dateiupload</pre>
+        </div>
+    </div>
+    
+    <div class="card mb-4">
+        <div class="card-header">
+            <h5 class="card-title mb-0">CSV-Spaltenkonfiguration</h5>
+        </div>
+        <div class="card-body">
+            <p class="text-muted">Konfigurieren Sie hier die Namen der Spalten in Ihrer CSV-Datei. Wenn Sie die Felder leer lassen, werden die Standardwerte verwendet.</p>
+                <div class="row">
+                    <div class="col-md-4">
+                        {{ form_row(form.csvFieldConfig.ticketIdField) }}
+                    </div>
+                    <div class="col-md-4">
+                        {{ form_row(form.csvFieldConfig.usernameField) }}
+                    </div>
+                    <div class="col-md-4">
+                        {{ form_row(form.csvFieldConfig.ticketNameField) }}
+                    </div>
                 </div>
             {{ form_end(form) }}
         </div>
