--- a/templates/smtp_config/edit.html.twig
+++ b/templates/smtp_config/edit.html.twig
@@ -45,8 +45,7 @@
                         </div>
                     </div>
                 </div>
-                
-                <hr>
+                  <hr>
                 <h4>Absender-Einstellungen</h4>
                 
                 <div class="row mt-3">
@@ -55,6 +54,12 @@
                     </div>
                     <div class="col-md-6">
                         {{ form_row(form.senderName) }}
+                    </div>
+                </div>
+                
+                <div class="row mt-3">
+                    <div class="col-md-12">
+                        {{ form_row(form.ticketBaseUrl) }}
                     </div>
                 </div>
                 
