--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -44,6 +44,9 @@
                         <li class="nav-item">
                             <a class="nav-link {% if app.request.get('_route') == 'change_password' %}active{% endif %}" href="{{ path('change_password') }}">Passwort ändern</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link {% if app.request.get('_route') == 'email_log' %}active{% endif %}" href="{{ path('email_log') }}">Versandprotokoll</a>
+                        </li>
                     </ul>
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item">
